# jaxboost

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api/: index.html
api/aggregation/: index.html
api/ensemble/: index.html
api/losses/: index.html
api/routing/: index.html
api/splits/: index.html
api/structures/: index.html
api/training/: index.html
docs/: index.md
docs/api/: aggregation.md  ensemble.md  index.md  losses.md  routing.md  splits.md  structures.md  training.md
docs/getting-started/: quickstart.md
examples/: benchmark_em_moe.py  benchmark_extended.py  benchmark_moe.py  benchmark_objectives.py  benchmark_splits.py  differentiable_tree_demo.py  hybrid_moe_demo.py  linear_leaf_extrapolation.py  moe_demo.py  multi_task_missing_labels.py  quickstart.py  xgboost_objectives.py
getting-started/quickstart/: index.html
search/: search_index.json
src/jaxboost/: __init__.py  _version.py
src/jaxboost/aggregation/: __init__.py  boosting.py  ode_boosting.py
src/jaxboost/core/: __init__.py  protocols.py
src/jaxboost/ensemble/: __init__.py  gating.py  hybrid_moe.py  moe.py
src/jaxboost/ib/: __init__.py  ib_tree.py
src/jaxboost/losses/: __init__.py  classification.py  regression.py
src/jaxboost/objective/: __init__.py  auto.py  binary.py  multi_output.py  multi_task.py  multiclass.py  regression.py  survival.py
src/jaxboost/routing/: __init__.py  soft.py
src/jaxboost/splits/: __init__.py  attention.py  axis_aligned.py  hyperplane.py  interaction_discovery.py  sparse_hyperplane.py
src/jaxboost/structures/: __init__.py  linear_leaf.py  oblivious.py
src/jaxboost/training/: __init__.py  trainer.py
tests/: __init__.py  test_trainer.py  test_tree.py
