[project]
name = "jaxboost"
version = "0.1.0"
description = "Next-generation differentiable gradient boosting with JAX"
readme = "README.md"
license = "MIT"
authors = [
    { name = "J Xu", email = "jxucoder@gmail.com" }
]
keywords = [
    "machine-learning",
    "gradient-boosting",
    "jax",
    "differentiable-programming",
    "gpu",
    "soft-trees",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "optax>=0.1.7",
    "chex>=0.1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
benchmark = [
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
]
ode = [
    "diffrax>=0.5.0",
]
polars = [
    "polars>=0.19.0",
    "pyarrow>=14.0.0",
]

[project.urls]
Homepage = "https://github.com/jxu/jaxboost"
Repository = "https://github.com/jxu/jaxboost"
Issues = "https://github.com/jxu/jaxboost/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[dependency-groups]
dev = [
    "pandas>=2.3.3",
]
